--- a/templates/usr_admin/users-editor.html
+++ b/templates/usr_admin/users-editor.html
@@ -48,7 +48,7 @@
                                                     </div>
                                                     <div class="col-md-6">
                                                         <div class="form-group">
-                                                            <label class="bmd-label-floating"><strong>Member Since:&nbsp &nbsp</strong>{{ user.created_on }}</label>
+                                                            <label class="bmd-label-floating"><strong>Member Since:&nbsp &nbsp</strong>{{ user.created_date }}</label>
                                                         </div>
                                                     </div>
                                                 </div>
