--- a/templates/assessments/index.html
+++ b/templates/assessments/index.html
@@ -11,7 +11,7 @@
                     <div class="col-md-6">
                         <div class="card card-chart">
                             <div class="card-header card-header-warning">
-                                <div class="ct-chart" id="dailySalesChart"><h4><strong>CDM Assessment</strong></h4></div>
+                                <div class="ct-chart" id="dailySalesChart"><h4><strong>CDM Assessments</strong></h4></div>
                             </div>
                             <div class="card-body">
                                 <h4 class="card-title">Current Score: 3</h4>
@@ -35,7 +35,7 @@
                     <div class="col-md-6">
                         <div class="card card-chart">
                             <div class="card-header card-header-warning">
-                                <div class="ct-chart" id="dailySalesChart"><h4><strong>CSF Assessment</strong></h4></div>
+                                <div class="ct-chart" id="dailySalesChart"><h4><strong>CSF Assessments</strong></h4></div>
                             </div>
                             <div class="card-body">
                             {# TODO: Work on calculating the percent change in score from previous to current.  use len and len - 1 #}
@@ -59,12 +59,10 @@
                                         <td>{{ assessment.name }}</td>
                                         <td>{{ assessment.completed }}</td>
                                         <td>{{ assessment.created_date }}</td>
-
                                         {% if assessment.completed == '0%' %}
-{#                                            <td> <input class=" btn btn-warning btn-sm" type="submit" name="action" value="Start" onclick="window.location.href='/assessments/{{ assessment.guid }}';"></td>#}
                                             <td><a href="/assessments/{{ assessment.guid }}/ID.AM-1"><btn class="btn btn-warning btn-sm">Start</btn></a></td>
                                         {% else %}
-                                            <td> Edit BTN Placeholder</td>
+                                            <td><a href="/assessments/{{ assessment.guid }}/ID.AM-1"><btn class="btn btn-warning btn-sm">Edit</btn></a></td>
                                         {% endif %}
                                     </tr>
                                     {% endfor %}
@@ -77,7 +75,6 @@
 {#                                </div>#}
                             </div>
                             <div class="card-footer">
-{#                                <input class="btn btn-warning btn-sm" type="submit" name="start" value="Prepare New CSF Assessment" onclick="window.location.href='/assessments/prep';">#}
                                 <a href="/assessments/prep"><btn class="btn btn-warning btn-sm" onclick="window.location.href='/assessments/prep';">Prepare New CSF Assessment</btn></a>
                             </div>
                         </div>
