minor updates to table layout

--- a/templates/assessments/index.html
+++ b/templates/assessments/index.html
@@ -38,14 +38,6 @@
                                 <div class="ct-chart" id="dailySalesChart"><h4><strong>CSF Assessments</strong></h4></div>
                             </div>
                             <div class="card-body">
-                            {# TODO: Work on calculating the percent change in score from previous to current.  use len and len - 1 #}
-{#                                <h4 class="card-title">Current Score: </h4>#}
-{#                                <p class="card-category">#}
-{#                                    <span class="text-success">#}
-{#                                        <i class="fa fa-long-arrow-up"></i>#}
-{#                                        55%#}
-{#                                    </span> increase in today sales.#}
-{#                                </p>#}
                                 <h4 class="card-title">Assessments: </h4>
                                 <table style="width: 100%">
                                     <tr>
@@ -68,6 +60,7 @@
                                         <td><td><a href="/assessments/delete/{{ assessment.guid }}"><btn class="btn btn-warning btn-sm">Delete</btn></a></td></td>
                                     </tr>
                                     {% endfor %}
+
                                 </table>
                             </div>
                             <div class="card-footer">
@@ -78,6 +71,19 @@
                             </div>
                             <div class="card-footer">
                                 <a href="/assessments/prep"><btn class="btn btn-warning btn-sm" onclick="window.location.href='/assessments/prep';">Prepare New CSF Assessment</btn></a>
+                            </div>
+                            <div class="card-body table-responsive">
+                                <table class="table table-hover">
+                                    <thead class="text-warning">
+                                        <tr>
+                                            <th>Name</th>
+                                            <th>Progress</th>
+                                            <th>Created</th>
+                                            <th>Action</th>
+                                        </tr>
+                                    </thead>
+                                    {%  %}
+                                </table>
                             </div>
                         </div>
                     </div>
