Updates Related to Add features
Add Vendor
Add Product
related
Product Category
Capabilities
Product Type (Commercial, FOSS, Inhouse)

--- a/static/css/material-dashboard.css
+++ b/static/css/material-dashboard.css
@@ -19741,3 +19741,10 @@ table, th, td {
   display: block;
   color: red;
 }
+
+
+ul.no-bullets {
+  list-style-type: none;
+  margin-left: 15px;
+  padding: 0;
+}
