--- a/templates/wizards/add_product.html
+++ b/templates/wizards/add_product.html
@@ -60,7 +60,7 @@
 									<h5>This information will let us know more about your place.</h5>
 		                    	</div>
 								<div class="wizard-navigation">
-									<ul>
+									<ul class="nav nav-pills">
 			                            <li><a href="#location" data-toggle="tab">Location</a></li>
 			                            <li><a href="#type" data-toggle="tab">Type</a></li>
 			                            <li><a href="#facilities" data-toggle="tab">Facilities</a></li>
